RESOLVED FIXED84218
DFG should not attempt to get rare case counts for op_mod on ARM
https://bugs.webkit.org/show_bug.cgi?id=84218
Summary DFG should not attempt to get rare case counts for op_mod on ARM
Filip Pizlo
Reported 2012-04-17 17:35:34 PDT
op_mod on non-x86 platforms is a C function call with no profiling, so the DFG should rely on other kinds of profiling, which we have plenty of anyway.
Attachments
the patch (2.50 KB, patch)
2012-04-17 17:37 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2012-04-17 17:37:05 PDT
Created attachment 137640 [details] the patch
Geoffrey Garen
Comment 2 2012-04-17 17:41:29 PDT
Comment on attachment 137640 [details] the patch r=me
Filip Pizlo
Comment 3 2012-04-17 21:05:46 PDT
Note You need to log in before you can comment on or make changes to this bug.