DFG should not attempt to get rare case counts for op_mod on ARM https://bugs.webkit.org/show_bug.cgi?id=84218

Reviewed by Geoff Garen.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::makeSafe):
* dfg/DFGCommon.h:
(JSC::DFG::isX86):
(DFG):



Canonical link: https://commits.webkit.org/101728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114478 268f45cc-cd09-0410-ab3c-d52691b4dbfc